--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Cmf-d</string>
+    <string name="app_name">Cmd-f</string>
     <string name="title_activity_maps">Map</string>
 </resources>
